[workspace]
resolver = "2"
members = [
    "cargo-symex",
    "examples",
    "crates/llvm-ir",
    "crates/symex_lib",
    "crates/valid_derive",
    # "armv6-m-examples", # <- has its own profiles, so not proper member
    "wcet-analasis-example", 
    # "armv7-m-examples", # <- -||-
]
exclude = ["symex-llvm-14-legacy","armv7-m-examples"]

[profile.release]
debug = true

[patch.crates-io]
rtic-monotonics = { git = "https://github.com/rtic-rs/rtic" }
